<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartHyperMarket</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_product">Product</string>
    <string name="overflow">Overflow</string>
    <string name="camera">Scan!</string>
    <string name="home">Home</string>
    <string name="review">Review</string>
    <string name="large_text">Large Text</string>
    <string name="add">Add</string>
    <string name="back">Back</string>
    <string name="Quantity">Quantity</string>
    <string name="ProductName">Name</string>
    <string name="QT">QT</string>
    <string name="fireorder">Fire Order</string>
    <string name="title_activity_dash_board">Home</string>
    <string name="title_activity_order">Order</string>
    <string name="title_activity_browse">Browse Products</string>
    <string name="title_activity_reviews">Product Reviews</string>
    <string name="expandCategory">Expand Category</string>
    <string name="reviewBtn">Reviews</string>

    <!-- Product details -->
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="weight">Weight</string>
    <string name="brand">Brand</string>

    <!-- DashBoard -->
    <string name="title_scan">Scan</string>
    <string name="title_cart">My Cart</string>
    <string name="title_browse">Browse</string>
    <string name="title_orders">Orders</string>

    <!-- Order details -->
    <string name="orderId">Order Id</string>
    <string name="confirmCode">Code</string>
    <string name="state">State</string>
    <string name="totalPrice">Total Price</string>
    <string name="orderProducts">Products</string>
    <string name="title_activity_offer">OfferActivity</string>
    
    <!-- Offer details -->
    <string name="offerPrice">Price</string>
    <string name="offerTeaser">Teaser</string>
    <string name="offerProducts">Products</string>

</resources>
