<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/OrderId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:textColor="#333"
                android:textSize="24sp"
                android:textStyle="bold" />
    </LinearLayout>
        
    <TableLayout
        android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center_horizontal">
        <TableRow>
            <View
                android:layout_span="2"
                android:layout_width="wrap_content"
                android:layout_height="0.5dp"
                android:layout_weight="1"
                android:background="#999" />
        </TableRow>
        <TableRow
            android:layout_marginTop="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_gravity="right"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/confirmCode" />
            <TextView
                android:id="@+id/confirmCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_gravity="left"
                android:textSize="16sp" />
        </TableRow>
        <TableRow>
            <View
                android:layout_marginTop="15dp"
                android:layout_span="2"
                android:layout_width="wrap_content"
                android:layout_height="0.5dp"
                android:layout_weight="1"
                android:background="#999" />
        </TableRow>
        <TableRow
            android:layout_marginTop="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_gravity="right"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/state" />
            <TextView
                android:id="@+id/State"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_gravity="left"
                android:textSize="16sp" />
        </TableRow>
        <TableRow>
            <View
                android:layout_marginTop="15dp"
                android:layout_span="2"
                android:layout_width="wrap_content"
                android:layout_height="0.5dp"
                android:layout_weight="1"
                android:background="#999" />
        </TableRow>
        <TableRow
            android:layout_marginTop="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_gravity="right"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/totalPrice" />
            <TextView
                android:id="@+id/totalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_gravity="left"
                android:textSize="16sp" />
        </TableRow>
        <TableRow>
            <View
                android:layout_marginTop="15dp"
                android:layout_span="2"
                android:layout_width="wrap_content"
                android:layout_height="0.5dp"
                android:layout_weight="1"
                android:background="#999" />
        </TableRow>
        <TableRow
            android:layout_marginTop="15dp">
            <TextView
                android:id="@+id/orderProducts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_gravity="right"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/orderProducts" />       
        </TableRow>
               
    </TableLayout>
    <ListView
          android:id="@+id/listViewOrderProducts"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_marginTop="15dp"
     >
     </ListView>

</LinearLayout>
